tests/rules/samples/check_preprocessor_protection.h
#define X 1

#ifndef check_preprocessor_protection_h
# define CHECK_PREPROCESSOR_PROTECTION_H
#
#endif

#define Y 2

#ifndef check_preprocessor_protection_h
# define CHECK_PREPROCESSOR_PROTECTION_H
#endif

#ifndef check_preprocessor_protection_h
# define CHECK_PREPROCESSOR_PROTECTION_H
#endif
